# CryptoAIS

./: .gitignore  CryptoAIS updates.aip  CryptoAIS.aip  README.md  build.ps1  main.py  myproject.toml  pyproject.toml  requirements.txt  updates.txt
dashboards/: dashboard_V2.xlsx
routes/: router.py
scripts/: csv_processor.py  excel_processor.py
ui/: components.py
