[project]
name = "CryptoAIS"
version = "2.0.0"
description = "A Crypto Trade visualizer that calculates profit/loss and taxation on Crypto Trades using AIS's Data"
authors = [
    {name = "Krishna Noutiyal",email = "mail@krishnanoutiyal.in"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flet (>=0.85.2,<0.86.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "pandas (>=3.0.3,<4.0.0)",
    "toml (>=0.10.2,<0.11.0)",
    "flet-cli (>=0.85.3,<0.86.0)",
    "flet-desktop (>=0.85.3,<0.86.0)",
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.flet]
product = "CryptoAIS"
company = "Pooja ITR Center"
copyright = "Copyright (C) 2026 Pooja ITR Center"
[dependency-groups]
dev = [
    "ipykernel (>=7.3.0,<8.0.0)"
]
